--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,18 +3,18 @@ version: '3.7'
 services:
   app:
     container_name: frontend
-    image: flukgoza/team-7-frontend:1.2.0
+    image: frontend:1.2.0
     restart: always
-    build: ./project_dev-tools_frontend
-    ports: ['8660:8660']
+    build: ./frontend
+    ports: ['8080:8080']
   back:
     # depends_on:
     #   - mongodb
-    container_name: team-7-backend
-    image: flukgoza/team-7-backend:1.1.3
+    container_name: backend
+    image: backend:1.1.3
     restart: always
-    build: ./project_dev-tools_server
-    ports: ['1111:1111']
+    build: ./backend
+    ports: ['3000:3000']
   
     # environment:
     #   - DB_HOST=mongodb
